[gd_scene load_steps=38 format=4 uid="uid://yrbncu3bu7y6"]

[ext_resource type="Script" path="res://main.gd" id="1_7ng31"]
[ext_resource type="Texture2D" uid="uid://ddhi3buwcvuub" path="res://assets/sprites/14-TileSets/Terrain (32x32).png" id="1_sm6ud"]
[ext_resource type="PackedScene" uid="uid://cij1prqjgcjf3" path="res://scenes/player/player.tscn" id="2_177vh"]
[ext_resource type="Texture2D" uid="uid://cbwii1jnv4og" path="res://assets/sprites/14-TileSets/Decorations (32x32).png" id="3_trw4k"]
[ext_resource type="PackedScene" uid="uid://kvi4djl1fik7" path="res://scenes/slowdown/slow_down.tscn" id="3_vbrni"]
[ext_resource type="PackedScene" uid="uid://c8h1ph6wm24va" path="res://scenes/danger_object/danger_object.tscn" id="4_kueqr"]
[ext_resource type="PackedScene" uid="uid://chcljdmvkgnnp" path="res://scenes/collectable/collectable.tscn" id="7_v6x83"]
[ext_resource type="Texture2D" uid="uid://e8qtep5s8wfl" path="res://assets/sprites/12-Live and Coins/Big Diamond Idle (18x14).png" id="8_scffc"]
[ext_resource type="Texture2D" uid="uid://dsk8udcux53cd" path="res://assets/sprites/12-Live and Coins/Big Heart Idle (18x14).png" id="8_tanap"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rd7pl"]
texture = ExtResource("1_sm6ud")
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
10:2/0 = 0
11:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
32:2/0 = 0
33:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
10:3/0 = 0
11:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
32:3/0 = 0
33:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
10:4/0 = 0
11:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
10:5/0 = 0
11:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
10:6/0 = 0
11:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
10:7/0 = 0
11:7/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
32:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
10:10/0 = 0
11:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
10:11/0 = 0
11:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
10:14/0 = 0
11:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
32:14/0 = 0
33:14/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
10:15/0 = 0
11:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
32:15/0 = 0
33:15/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
10:16/0 = 0
11:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
32:16/0 = 0
33:16/0 = 0
34:16/0 = 0
35:16/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
10:17/0 = 0
11:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
26:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
32:17/0 = 0
33:17/0 = 0
34:17/0 = 0
35:17/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
10:18/0 = 0
11:18/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
10:19/0 = 0
11:19/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
32:20/0 = 0
33:20/0 = 0
34:20/0 = 0
35:20/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
23:21/0 = 0
26:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
32:21/0 = 0
33:21/0 = 0
34:21/0 = 0
35:21/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
10:22/0 = 0
11:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
20:22/0 = 0
21:22/0 = 0
22:22/0 = 0
23:22/0 = 0
26:22/0 = 0
27:22/0 = 0
28:22/0 = 0
29:22/0 = 0
32:22/0 = 0
33:22/0 = 0
34:22/0 = 0
35:22/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
10:23/0 = 0
11:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
20:23/0 = 0
21:23/0 = 0
22:23/0 = 0
23:23/0 = 0
26:23/0 = 0
27:23/0 = 0
28:23/0 = 0
29:23/0 = 0
32:23/0 = 0
33:23/0 = 0
34:23/0 = 0
35:23/0 = 0

[sub_resource type="TileSet" id="TileSet_wj3bk"]
sources/0 = SubResource("TileSetAtlasSource_rd7pl")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xsa15"]
size = Vector2(446, 79)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gnk5c"]
texture = ExtResource("3_trw4k")
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
2:3/0 = 0
3:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
2:5/0 = 0
3:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
10:4/0 = 0
11:4/0 = 0

[sub_resource type="TileSet" id="TileSet_cs3sd"]
sources/1 = SubResource("TileSetAtlasSource_gnk5c")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7g6nh"]
size = Vector2(28, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1hud"]
size = Vector2(92, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6mjoi"]
size = Vector2(28, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4baa"]
atlas = ExtResource("8_scffc")
region = Rect2(0, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw4ma"]
atlas = ExtResource("8_scffc")
region = Rect2(18, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0v8g"]
atlas = ExtResource("8_scffc")
region = Rect2(36, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfe6e"]
atlas = ExtResource("8_scffc")
region = Rect2(54, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3b1j"]
atlas = ExtResource("8_scffc")
region = Rect2(72, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3n45"]
atlas = ExtResource("8_scffc")
region = Rect2(90, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydr27"]
atlas = ExtResource("8_scffc")
region = Rect2(108, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_whodd"]
atlas = ExtResource("8_scffc")
region = Rect2(126, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv5pk"]
atlas = ExtResource("8_scffc")
region = Rect2(144, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1rar"]
atlas = ExtResource("8_scffc")
region = Rect2(162, 0, 18, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_6e8t1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4baa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw4ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0v8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfe6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3b1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3n45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydr27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whodd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv5pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1rar")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_c8a14"]
atlas = ExtResource("8_tanap")
region = Rect2(0, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_psnyr"]
atlas = ExtResource("8_tanap")
region = Rect2(18, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1jyf"]
atlas = ExtResource("8_tanap")
region = Rect2(36, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlpf3"]
atlas = ExtResource("8_tanap")
region = Rect2(54, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rv74"]
atlas = ExtResource("8_tanap")
region = Rect2(72, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_iik2w"]
atlas = ExtResource("8_tanap")
region = Rect2(90, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_im5cf"]
atlas = ExtResource("8_tanap")
region = Rect2(108, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcclw"]
atlas = ExtResource("8_tanap")
region = Rect2(126, 0, 18, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_avyvn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8a14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psnyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1jyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlpf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rv74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iik2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im5cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcclw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Main" type="Node2D"]
script = ExtResource("1_7ng31")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Level" type="Node2D" parent="."]

[node name="Floor" type="Node2D" parent="Level"]

[node name="TileMapLayer" type="TileMapLayer" parent="Level/Floor"]
tile_map_data = PackedByteArray("AADz/wMAAAADAAoAAAD0/wMAAAAEAAoAAAD1/wMAAAAFAAoAAAD2/wMAAAAGAAoAAAD3/wMAAAADAAoAAAD4/wMAAAAEAAoAAAD5/wMAAAAFAAoAAAD6/wMAAAAGAAoAAAD7/wMAAAADAAoAAAD8/wMAAAAEAAoAAAD9/wMAAAAFAAoAAAD+/wMAAAAGAAoAAAD//wMAAAADAAoAAAAAAAMAAAAEAAoAAAABAAMAAAAFAAoAAAACAAMAAAAGAAoAAAADAAMAAAADAAoAAAAEAAMAAAAEAAoAAAAFAAMAAAAFAAoAAAAGAAMAAAAGAAoAAAAHAAMAAAADAAoAAAAIAAMAAAAEAAoAAAAJAAMAAAAFAAoAAAAKAAMAAAAGAAoAAAALAAMAAAAFAAoAAAAMAAMAAAAGAAoAAAANAAMAAAAHAAoAAADy/wMAAAACAAoAAADy/wQAAAACAAYAAADy/wUAAAACAAYAAADy/wYAAAACAAYAAADy/wcAAAACAAYAAAANAAQAAAAHAAYAAAANAAUAAAAHAAYAAAANAAYAAAAHAAYAAAANAAcAAAAHAAYAAAAKAAcAAAAEAAYAAAALAAcAAAAFAAYAAAAMAAcAAAAGAAYAAAAMAAYAAAAGAAUAAAAMAAUAAAAGAAUAAAAMAAQAAAAGAAMAAADz/wQAAAADAAMAAADz/wUAAAADAAUAAADz/wYAAAADAAUAAADz/wcAAAADAAYAAAD0/wcAAAAEAAYAAAD1/wcAAAAFAAYAAAD2/wcAAAAEAAYAAAD3/wcAAAAFAAYAAAD4/wcAAAAEAAYAAAD5/wcAAAAFAAYAAAD6/wcAAAAEAAYAAAD7/wcAAAAFAAYAAAD8/wcAAAAEAAYAAAD9/wcAAAAFAAYAAAD+/wcAAAAEAAYAAAD//wcAAAAFAAYAAAAAAAcAAAAEAAYAAAABAAcAAAAFAAYAAAACAAcAAAAEAAYAAAADAAcAAAAFAAYAAAAEAAcAAAAEAAYAAAAFAAcAAAAFAAYAAAAGAAcAAAAEAAYAAAAHAAcAAAAFAAYAAAAIAAcAAAAEAAYAAAAJAAcAAAAFAAYAAAD0/wQAAAAEAAMAAAD1/wQAAAAFAAMAAAD0/wUAAAAEAAUAAAD1/wUAAAAFAAUAAAD0/wYAAAAEAAUAAAD1/wYAAAAFAAUAAAD2/wQAAAAEAAMAAAD3/wQAAAAFAAMAAAD2/wUAAAAEAAUAAAD3/wUAAAAFAAUAAAD2/wYAAAAEAAUAAAD3/wYAAAAFAAUAAAD4/wQAAAAEAAMAAAD5/wQAAAAFAAMAAAD4/wUAAAAEAAUAAAD5/wUAAAAFAAUAAAD4/wYAAAAEAAUAAAD5/wYAAAAFAAUAAAD6/wQAAAAEAAMAAAD7/wQAAAAFAAMAAAD6/wUAAAAEAAUAAAD7/wUAAAAFAAUAAAD6/wYAAAAEAAUAAAD7/wYAAAAFAAUAAAD8/wQAAAAEAAMAAAD9/wQAAAAFAAMAAAD8/wUAAAAEAAUAAAD9/wUAAAAFAAUAAAD8/wYAAAAEAAUAAAD9/wYAAAAFAAUAAAD+/wQAAAAEAAMAAAD//wQAAAAFAAMAAAD+/wUAAAAEAAUAAAD//wUAAAAFAAUAAAD+/wYAAAAEAAUAAAD//wYAAAAFAAUAAAAAAAQAAAAEAAMAAAABAAQAAAAFAAMAAAAAAAUAAAAEAAUAAAABAAUAAAAFAAUAAAAAAAYAAAAEAAUAAAABAAYAAAAFAAUAAAACAAQAAAAEAAMAAAADAAQAAAAFAAMAAAACAAUAAAAEAAUAAAADAAUAAAAFAAUAAAACAAYAAAAEAAUAAAADAAYAAAAFAAUAAAAEAAQAAAAEAAMAAAAFAAQAAAAFAAMAAAAEAAUAAAAEAAUAAAAFAAUAAAAFAAUAAAAEAAYAAAAEAAUAAAAFAAYAAAAFAAUAAAAGAAQAAAAEAAMAAAAHAAQAAAAFAAMAAAAGAAUAAAAEAAUAAAAHAAUAAAAFAAUAAAAGAAYAAAAEAAUAAAAHAAYAAAAFAAUAAAAIAAQAAAAEAAMAAAAJAAQAAAAFAAMAAAAIAAUAAAAEAAUAAAAJAAUAAAAFAAUAAAAIAAYAAAAEAAUAAAAJAAYAAAAFAAUAAAAKAAQAAAAEAAMAAAALAAQAAAAFAAMAAAAKAAUAAAAEAAUAAAALAAUAAAAFAAUAAAAKAAYAAAAEAAUAAAALAAYAAAAFAAUAAAA=")
tile_set = SubResource("TileSet_wj3bk")

[node name="StaticBody2D" type="StaticBody2D" parent="Level/Floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Floor/StaticBody2D"]
position = Vector2(0, 88.5)
shape = SubResource("RectangleShape2D_xsa15")

[node name="SlowDown" parent="Level" instance=ExtResource("3_vbrni")]
position = Vector2(-106, 3)
scale = Vector2(1.5, 1.5)

[node name="Platforms" type="Node2D" parent="Level"]

[node name="TileMapLayer" type="TileMapLayer" parent="Level/Platforms"]
tile_map_data = PackedByteArray("AAADAAAAAQAKAAQAAAAEAAAAAQALAAQAAAAGAP//AQAEAAQAAAAHAP//AQAFAAQAAAAIAP//AQAGAAQAAAAJAP//AQAHAAQAAAAKAP//AQAIAAQAAAALAP//AQAJAAQAAAACAP3/AQAKAAQAAAADAP3/AQALAAQAAAA=")
tile_set = SubResource("TileSet_cs3sd")

[node name="StaticBody2D" type="StaticBody2D" parent="Level/Platforms"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Platforms/StaticBody2D"]
position = Vector2(64, 7)
shape = SubResource("RectangleShape2D_7g6nh")
one_way_collision = true

[node name="StaticBody2D2" type="StaticBody2D" parent="Level/Platforms"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Platforms/StaticBody2D2"]
position = Vector2(144, -9)
shape = SubResource("RectangleShape2D_i1hud")
one_way_collision = true

[node name="StaticBody2D3" type="StaticBody2D" parent="Level/Platforms"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Platforms/StaticBody2D3"]
position = Vector2(48, -41)
shape = SubResource("RectangleShape2D_6mjoi")
one_way_collision = true

[node name="Dangers" type="Node2D" parent="Level"]

[node name="Danger" type="Node2D" parent="Level/Dangers"]
position = Vector2(102, -28)

[node name="DangerObject" parent="Level/Dangers/Danger" node_paths=PackedStringArray("begin_position", "end_position") instance=ExtResource("4_kueqr")]
position = Vector2(55.7892, 0)
begin_position = NodePath("../Begin")
end_position = NodePath("../End")

[node name="Begin" type="Marker2D" parent="Level/Dangers/Danger"]

[node name="End" type="Marker2D" parent="Level/Dangers/Danger"]
position = Vector2(83, 0)

[node name="Danger2" type="Node2D" parent="Level/Dangers"]
position = Vector2(26, 37)

[node name="DangerObject" parent="Level/Dangers/Danger2" node_paths=PackedStringArray("begin_position", "end_position") instance=ExtResource("4_kueqr")]
position = Vector2(35.5932, 0)
begin_position = NodePath("../Begin")
end_position = NodePath("../End")

[node name="Begin" type="Marker2D" parent="Level/Dangers/Danger2"]

[node name="End" type="Marker2D" parent="Level/Dangers/Danger2"]
position = Vector2(80, 0)

[node name="PowerUp" parent="Level" instance=ExtResource("7_v6x83")]
position = Vector2(47, -58)
sprite_frames = SubResource("SpriteFrames_6e8t1")

[node name="VictoryFlag" parent="Level" instance=ExtResource("7_v6x83")]
position = Vector2(-172, 31)
sprite_frames = SubResource("SpriteFrames_avyvn")

[node name="Player" parent="." instance=ExtResource("2_177vh")]
position = Vector2(-26, -40)

[node name="Timers" type="Node" parent="."]

[node name="PowerUpTimer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VictoryScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VictoryScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VictoryScreen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CanvasLayer/VictoryScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 32
text = "YOU WON!"

[node name="RestartButton" type="Button" parent="CanvasLayer/VictoryScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[connection signal="collected" from="Level/PowerUp" to="." method="_on_power_up_collected"]
[connection signal="collected" from="Level/VictoryFlag" to="." method="_on_victory_flag_collected"]
[connection signal="timeout" from="Timers/PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/VictoryScreen/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
